# key_mouse_tracker

./: .gitignore  CONFIG.py  KEY_DICT.py  KeyTracker.py  KeyboardListener.py  LICENSE  MouseTracker.py  Pipfile  README.md  Trackers.py  config.py  key_tracker.py  key_tracker_private.py  mouse_tracker.py  run_trackers.py  setup.cfg  setup.py
key_mouse_tracker/: Trackers.py  run_trackers.py
save_dir/key/metadata/2022-05-14/: key_meta_2022-05-14_23-13-06.csv
src/key_mouse_tracker/: Trackers.py  config.py  run_trackers.py
