[metadata]
name = key_mouse_tracker
version = 0.0.1
maintainer = Alicia Zeng
maintainer_email = 'aliciaxiaozeng@gmail.com',
description = 'a keyboard and mouse tracker for data analysis',
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alicialitrtwe/key_mouse_tracker
entry_points = {'console_scripts': ['track=key_mouse_tracker.run_trackers:main']}


[options]
python_requires = >=3.6

[options.entry_points]
console_scripts =
        track=key_mouse_tracker.run_trackers:main